--- a/css/profile-section.css
+++ b/css/profile-section.css
@@ -45,6 +45,19 @@
     font-size: 2em;
     font-weight: bold;
     color: #BADE30;
+    position: relative;
+    z-index: 1;
+}
+
+.profile-avatar-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    z-index: 10;
 }
 
 .profile-info {
